[package]
name = "axum-gpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
axum-extra = { version = "0.3", features = ["spa"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }